Fixes the contact info box as well as the facebook wall width problems
Problem can be seen here: www.byui.edu/newsroom

For whatever reason the width's that were set in the main.css file were
not correct or non existant.  #contact_info needed a width of 220px.
The .scrollbar needs to be at 218px so that with a 1px border it is
220px.  The .ff .scrollbar-pane needs to be 208px to take into account
the new .scrollbar width.  The .fb_wall must be 186px to take into
account the scrollbar.

--- a/css/main.css
+++ b/css/main.css
@@ -1203,6 +1203,7 @@ h2.box_header {
 
   margin-bottom: 0px;
   margin-top: 10px;
+  width: 220px;
 }
 #contact_info #location {
   margin: 0 8px 4px;
@@ -1963,7 +1964,7 @@ h2.box_header {
 }
 .fff .scrollbar-pane {
   margin-right: 12px;
-  width: 215px;
+  width: 208px;
 }
 .fff .scrollbar-handle-container {
   background: #EEE;
@@ -1995,7 +1996,7 @@ h2.box_header {
 .fb-wall {
   font-family: "lucida grande", tahoma, verdana, arial, sans-serif;
   font-size: 13px;
-  width: 196px;
+  width: 186px;
   line-height: 1.2em;
   color: #333333;
   padding: 10px;
